# R-TYPE

./: CMakeLists.txt  Doxyfile  README.md  mac.sh
Documentation/: Components.md  Dev.md  tuto.md
ECS/: CMakeLists.txt
ECS/debug/: CMakeLists.txt  main.cpp
ECS/include/: ex.hpp  parallax.hpp
ECS/include/ECS/: Components.hpp  Loader.hpp  Systems.hpp
ECS/include/ECS/Architecture/: Entity.hpp  Readme.md  Registry.hpp  SparseArray.hpp
ECS/include/ECS/Component/: RT_Collision.hpp  RT_CollisionMulti.hpp  RT_Controllable.hpp  RT_Direction.hpp  RT_Drawable.hpp  RT_Enemy.hpp  RT_Health.hpp  RT_Hitbox.hpp  RT_Music.hpp  RT_Position.hpp  RT_Shoots.hpp  RT_ShootsMulti.hpp  RT_Size.hpp  RT_Sound.hpp  RT_Velocity.hpp  RT_parallax.hpp
ECS/include/ECS/Format/: FormatECS.hpp
ECS/include/Exception/: NetworkException.hpp
ECS/src/: main.cpp
ECS/src/ECS/: Loader.cpp
ECS/src/ECS/Components/: RT_CollisionMulti.cpp  RT_Drawable.cpp  RT_Enemy.cpp  RT_Position.cpp  RT_ShootsMulti.cpp
ECS/src/ECS/Gameplay/: Item.cpp  parallax.cpp
ECS/src/ECS/Systems/: CollitionsMultiSystem.cpp  ControllableSystem.cpp  DrawableSystem.cpp  MovementSystem.cpp  MusicSystem.cpp  PositionSystem.cpp  SoundSystem.cpp  shootsMultiplayeur.cpp
ECS/src/utils/: createEntity.cpp  initRegistry.cpp
ECS/tests/: CMakeLists.txt
ECS/tests/ECS/Architecture/: testEntity.cpp  testSparseArray.cpp
Server/include/: entitySend.hpp  sfServeur.hpp
Server/src/: SFserveur.cpp  computeGameplay.cpp  enemyShoot.cpp  makeEnemyFromFile.cpp  makeSpecialEntity.cpp  packetManage.cpp  updates.cpp
Server/src/commandForServer/: move.cpp  shot.cpp
Server/src/entytiFromServeur/: sendNewPoseEnemy.cpp  sendNewPoseProjectil.cpp
client/include/: getEntity.hpp  sfClient.hpp
client/src/: SFclientTCP.cpp  getInfo.cpp  showGameplay.cpp
client/src/commandeToServeur/: clear.cpp  move.cpp  shot.cpp
client/src/entityForclient/: pickEnemyArgv.cpp  pickProjectilArgv.cpp
include/: EntityTypes.hpp  commande.hpp  serveurPlayeurInfo.hpp
map/: map0  test
